--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><strong><u>TRAP</u></strong></h1>
+    <header>
+    <h1><strong><u>TRAP</u></strong></h1> <br>
+</header>
+<main>
     <table>
         <tr>
           <th><strong><u>Canciones</u></strong></th>
@@ -18,14 +21,14 @@
         </tr>
         <tr>
         
-            <td>  Cactus</td>
+            <td> <a href="/letra-cactus.html">Cactus</a></td>
             <td>Gustavo Cerati</td>
             <td> Fuerza natural </td>
             <td>   3:55</td>
             <td><img src="/assets/imagenes/ceratifuerza.jpg" alt="" width="250px"></td></td>
         </tr>
         <tr>
-            <td> Muchacha Ojos de papel</td>
+            <td> <a href="/letra-muchacha-ojos.html">Muchacha Ojos de papel</a></td>
             <td> Spinetta</td>
             <td> Almendra</td>
             <td> 3:04</td>
@@ -50,5 +53,9 @@
         
         </tr>
     </table>
+    </main>
+    <footer>
+        Negro
+    </footer>
 </body>
 </html>
